src/app/components/as-tour-list/styles/as-tour-list.component.scss
@import '../../../../styles/built-in-tags.scss';

:host {
  max-width: 1000px;
  width: 100%;
  display: block;
  position: relative;
}

.item {
  position: relative;
  display: flex;
  align-items: end;
  aspect-ratio: 3/2;
  background-size: cover;

  &::before {
    content: "";
    position: absolute;
    z-index: 1;
    width: 100%;
    height: 100%;
    opacity: .3;
  }

  .background-images {
    position: relative;
    display: flex;
    height: 100%;
    width: 100%;
    .background-image {
      position: absolute;
      top: 0;
      left: 0;
      height: 100%;
      width: 100%;
      img {
        height: 100%;
        width: 100%;
      }
    }
  }

  .info {
    display: flex;
    flex-direction: column;
    color: white;
    font-size: 20px;
    padding: 2%;
    position: absolute;

    .title {
      font-weight: bold;
    }

    .date {

    }
  }
}

